AnthemCode/objects/AdobeSession__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store the Adobe user session details.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <description>User BREEZESESSION cookie session value</description>
        <inlineHelpText>User BREEZESESSION cookie session value</inlineHelpText>
        <label>Session</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>Adobe Connect Domain URL</description>
        <label>URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AdobeSession</label>
</CustomObject>